--- a/src/utils/css/layout.css
+++ b/src/utils/css/layout.css
@@ -2,10 +2,6 @@
   display: flex;
 }
 
-.col + .col {
-  margin-left: 3rem;
-}
-
 .da-center {
   align-items: center;
   justify-content: center;
